<resources>
    <string name="app_name">The Martian</string>
    <string name="the_martian">The Martian</string>
    <string name="slogan">THE ENTRY TO THE RED PLANET</string>
    <string name="choose_a_rover">Choose a Rover</string>
    <string name="gallery_title">Gallery</string>
    <string name="launch_date_title">Launch date:</string>
    <string name="details_launch_date_title">LAUNCH DATE</string>
    <string name="launch_date">2011-11-26</string>
    <string name="latest_photo_title">Latest photo:</string>
    <string name="latest_photo">2020-12-12</string>
    <string name="total_photos">3702</string>
    <string name="total_photos_title">Total photos:</string>
    <string name="background_picture">Background picture</string>
    <string name="main_line">Main line</string>
    <string name="back">Back</string>
    <string name="rover_photo">Rover photo</string>
    <string name="details_total_photo_title">TOTAL PHOTOS</string>
    <string name="details_latest_photo_title">LATEST PHOTO</string>
    <string name="button_back">Button back</string>
    <string name="toast_error_message">No internet connection! :(</string>
    <string name="fab_description">Change photo date</string>
    <string name="favourites_title">Favourites</string>
    <string name="photo_list">Photos</string>
    <string name="photo_description">Mars photo</string>
    <string name="snack_add_favourite">Add to Favourite</string>
    <string name="date_temp">20-06-2020</string>
    <string name="rover_name_temp">Perseverance</string>
    <string name="line_descr">Line</string>
    <string name="snack_delete">Delete in Favourites</string>
    <string name="date">Date</string>
    <string name="camera_temp">CHEMCAM</string>
    <string name="rover">Rover</string>
    <string name="camera">Camera</string>
    <string name="choose_a_date">Choose a Date</string>
    <string name="choose_a_camera">Choose a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>
    <string name="select_all">Select All</string>
    <string name="error_toast">Something went wrong: %1s</string>
    <string name="temp_rover_name">Curiosity</string>
    <string name="is_active">Active</string>
    <string name="is_no_active">No Active</string>
    <string name="progress_text">Download Rover Data...</string>
</resources>