<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/vector_button_back"
        android:contentDescription="@string/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <ImageView
        android:id="@+id/addFavourite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/photo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/heart" />

    <ImageView
        android:id="@+id/deleteFavourite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/photo_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trash" />

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:textAppearance="@style/roverInformationTitle"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/date"
        app:layout_constraintEnd_toEndOf="@+id/date"
        app:layout_constraintStart_toStartOf="@+id/date" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/date_temp"
        android:textAppearance="@style/itemInformation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textAppearance="@style/itemInformation"
        android:text="@string/gallery_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/camera"
        app:layout_constraintStart_toEndOf="@+id/date" />

    <TextView
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:textAppearance="@style/itemInformation"
        android:text="@string/camera_temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/roverTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/rover"
        android:textAppearance="@style/roverInformationTitle"
        app:layout_constraintBottom_toTopOf="@+id/rover"
        app:layout_constraintEnd_toEndOf="@+id/rover"
        app:layout_constraintStart_toStartOf="@+id/rover" />

    <TextView
        android:id="@+id/cameraTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:textAppearance="@style/roverInformationTitle"
        android:text="@string/camera"
        app:layout_constraintBottom_toTopOf="@+id/camera"
        app:layout_constraintEnd_toEndOf="@+id/camera"
        app:layout_constraintStart_toStartOf="@+id/camera" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack"
        app:srcCompat="@drawable/test_photo" />


</androidx.constraintlayout.widget.ConstraintLayout>