<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:focusable="false"
    app:cardCornerRadius="24dp"
    app:cardElevation="16dp"
    android:background="@color/rover_info_card_bac">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/rover_info_card_bac">

        <ImageView
            android:id="@+id/roverImage"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/curiosity" />

        <TextView
            android:id="@+id/detailsLaunchDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textAppearance="@style/roverInformationTitle"
            android:text="@string/details_launch_date_title"
            app:layout_constraintEnd_toStartOf="@+id/detailsTotalPhotoTitle"
            app:layout_constraintStart_toEndOf="@+id/roverImage"
            app:layout_constraintTop_toTopOf="@+id/roverImage"
            app:layout_constraintBottom_toBottomOf="@+id/roverImage"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/detailsTotalPhotoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_total_photo_title"
            android:textAppearance="@style/roverInformationTitle"
            app:layout_constraintEnd_toStartOf="@+id/detailsLatestPhotoTitle"
            app:layout_constraintStart_toEndOf="@id/detailsLaunchDateTitle"
            app:layout_constraintTop_toTopOf="@+id/roverImage"
            app:layout_constraintBottom_toBottomOf="@+id/roverImage"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/detailsLatestPhotoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/details_latest_photo_title"
            android:textAppearance="@style/roverInformationTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailsTotalPhotoTitle"
            app:layout_constraintTop_toTopOf="@+id/roverImage"
            app:layout_constraintBottom_toBottomOf="@+id/roverImage"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/detailsLaunchDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_date"
            android:textAppearance="@style/roverInformation"
            app:layout_constraintEnd_toEndOf="@+id/detailsLaunchDateTitle"
            app:layout_constraintStart_toStartOf="@+id/detailsLaunchDateTitle"
            app:layout_constraintTop_toBottomOf="@+id/detailsLaunchDateTitle" />

        <TextView
            android:id="@+id/detailsTotalPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_photos"
            android:textAppearance="@style/roverInformation"
            app:layout_constraintEnd_toEndOf="@+id/detailsTotalPhotoTitle"
            app:layout_constraintStart_toStartOf="@+id/detailsTotalPhotoTitle"
            app:layout_constraintTop_toBottomOf="@+id/detailsTotalPhotoTitle" />

        <TextView
            android:id="@+id/detailsLatestPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latest_photo"
            android:textAppearance="@style/roverInformation"
            app:layout_constraintEnd_toEndOf="@+id/detailsLatestPhotoTitle"
            app:layout_constraintStart_toStartOf="@+id/detailsLatestPhotoTitle"
            app:layout_constraintTop_toBottomOf="@+id/detailsLatestPhotoTitle" />

        <TextView
            android:id="@+id/cardRoverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textAppearance="@style/roverName"
            android:text="@string/temp_rover_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/roverImage"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>