<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/rover_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.TheMartian.RoverName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Curiosity" />

    <TextView
        android:id="@+id/rover_is_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:textAppearance="@style/TextAppearance.TheMartian.IaActive"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rover_name"
        tools:text="Active" />

    <ImageView
        android:id="@+id/rover_picture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/bg_mars"
        android:padding="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rover_is_active"
        app:layout_constraintBottom_toTopOf="@+id/launch_date_title"
        app:srcCompat="@drawable/curiosity" />

    <TextView
        android:id="@+id/launch_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="8dp"
        android:text="@string/launch_date_title"
        android:textAppearance="@style/TextAppearance.TheMartian.ItemInfo"
        app:layout_constraintBottom_toTopOf="@+id/latest_photo_date_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/launch_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.TheMartian.RoverInfoMain"
        app:layout_constraintBottom_toBottomOf="@+id/launch_date_title"
        app:layout_constraintStart_toEndOf="@id/launch_date_title"
        app:layout_constraintTop_toTopOf="@+id/launch_date_title"
        tools:text="@string/launch_date" />

    <TextView
        android:id="@+id/latest_photo_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="8dp"
        android:text="@string/latest_photo_title"
        android:textAppearance="@style/TextAppearance.TheMartian.ItemInfo"
        app:layout_constraintBottom_toTopOf="@+id/total_photos_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/latest_photo_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.TheMartian.RoverInfoMain"
        app:layout_constraintBottom_toBottomOf="@+id/latest_photo_date_title"
        app:layout_constraintStart_toEndOf="@id/latest_photo_date_title"
        app:layout_constraintTop_toTopOf="@+id/latest_photo_date_title"
        tools:text="@string/latest_photo" />

    <TextView
        android:id="@+id/total_photos_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="16dp"
        android:text="@string/total_photos_title"
        android:textAppearance="@style/TextAppearance.TheMartian.ItemInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.TheMartian.RoverInfoMain"
        app:layout_constraintBottom_toBottomOf="@+id/total_photos_title"
        app:layout_constraintStart_toEndOf="@id/total_photos_title"
        app:layout_constraintTop_toTopOf="@+id/total_photos_title"
        tools:text="@string/total_photos" />

</androidx.constraintlayout.widget.ConstraintLayout>
