<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/ivPhotoItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/test_photo"
            android:contentDescription="@string/photo_description" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/favourite"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/photo_description"
        app:layout_constraintEnd_toEndOf="@+id/image_card_view"
        app:layout_constraintTop_toTopOf="@+id/image_card_view"
        app:srcCompat="@drawable/heart" />

        <TextView
            android:id="@+id/tvEarthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_temp"
            android:textAppearance="@style/TextAppearance.TheMartian.ItemInfo"
            app:layout_constraintTop_toBottomOf="@+id/image_card_view"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cameraName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/camera_temp"
            android:textAppearance="@style/TextAppearance.TheMartian.ItemInfo"
            app:layout_constraintTop_toBottomOf="@+id/image_card_view"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>