<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/black"
    android:layout_margin="4dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp">

        <ImageView
            android:id="@+id/ivPhotoItem"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="2dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/photo_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvEarthDate"
            app:layout_constraintStart_toEndOf="@+id/tvEarthDate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEarthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ivPhotoItem"
            android:layout_alignParentBottom="false"
            android:gravity="bottom"
            android:layout_margin="5dp"
            android:padding="2dp"
            android:text="@string/date_temp"
            android:textAppearance="@style/TextAppearance.TheMartian.ItemInfo"
            app:layout_constraintBottom_toTopOf="@+id/roverName"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/deleteFavourite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/photo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/trash" />

        <TextView
            android:id="@+id/roverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:layout_margin="5dp"
            android:textAppearance="@style/TextAppearance.TheMartian.ItemInfo"
            android:text="@string/rover_name_temp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>