<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/roverPicture"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginEnd="237dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_line"
        android:layout_width="1dp"
        android:layout_height="57dp"
        android:layout_marginStart="18dp"
        android:contentDescription="@string/line_descr"
        android:background="@drawable/vector_vertical_line"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/roverPicture"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/roverNameMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.TheMartian.RoverNameMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_line"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/launch_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/TextAppearance.TheMartian.ItemInfo"
        android:text="@string/launch_date_title"
        app:layout_constraintStart_toStartOf="@id/main_line"
        app:layout_constraintTop_toBottomOf="@id/roverNameMain" />

    <TextView
        android:id="@+id/launch_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/TextAppearance.TheMartian.RoverInfoMain"
        app:layout_constraintStart_toEndOf="@id/launch_date_title"
        app:layout_constraintTop_toBottomOf="@id/roverNameMain" />

    <TextView
        android:id="@+id/latest_photo_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/TextAppearance.TheMartian.ItemInfo"
        android:text="@string/latest_photo_title"
        app:layout_constraintStart_toStartOf="@id/main_line"
        app:layout_constraintTop_toBottomOf="@id/launch_date_title" />

    <TextView
        android:id="@+id/latest_photo_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/TextAppearance.TheMartian.RoverInfoMain"
        app:layout_constraintStart_toEndOf="@id/latest_photo_date_title"
        app:layout_constraintTop_toBottomOf="@id/launch_date" />

    <TextView
        android:id="@+id/total_photos_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="6dp"
        android:text="@string/total_photos_title"
        android:textAppearance="@style/TextAppearance.TheMartian.ItemInfo"
        app:layout_constraintStart_toStartOf="@id/main_line"
        app:layout_constraintTop_toBottomOf="@id/latest_photo_date_title" />

    <TextView
        android:id="@+id/total_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:textAppearance="@style/TextAppearance.TheMartian.RoverInfoMain"
        app:layout_constraintStart_toEndOf="@id/total_photos_title"
        app:layout_constraintTop_toBottomOf="@id/latest_photo_date" />

</androidx.constraintlayout.widget.ConstraintLayout>