<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="329dp"
        android:contentDescription="@string/background_picture"
        android:scaleType="centerCrop"
        android:src="@drawable/mars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choose_a_rover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/choose_a_rover"
        android:textAppearance="@style/TextAppearance.TheMartian.RoverInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_line"
        android:layout_width="57dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/vector_main_line"
        android:contentDescription="@string/main_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_a_rover" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager_main"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_gravity="top"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/rover_tab_indicators"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_line" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/rover_tab_indicators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pager_main"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        app:tabMode="fixed"
        app:tabPaddingEnd="3dp"
        app:tabPaddingStart="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>